--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.3
 cryptography==45.0.7
 defusedxml==0.7.1
 Django==5.2.5
+django-debug-toolbar==6.0.0
 django-filter==25.1
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
@@ -29,3 +30,4 @@ sqlparse==0.5.3
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+whitenoise==6.9.0
